--- a/static/css/reset.css
+++ b/static/css/reset.css
@@ -23,9 +23,9 @@ time, mark, audio, video, input {
     vertical-align: baseline;
 }
 
-*{
-touch-action: none;
-}
+/* *{
+    touch-action: none;
+} */
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
 footer, header, menu, nav, section {
@@ -54,7 +54,7 @@ table {
 a {
     color: #422a0d;
     text-decoration: none;
-    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
 }
 
 li {
@@ -68,19 +68,19 @@ li {
 
 ::-webkit-scrollbar-track-piece {
     background-color: rgba(0, 0, 0, 0.2);
-    -webkit-border-radius: 6px;
+    border-radius: 6px;
 }
 
 ::-webkit-scrollbar-thumb:vertical {
     height: 5px;
     background-color: rgba(125, 125, 125, 0.7);
-    -webkit-border-radius: 6px;
+    border-radius: 6px;
 }
 
 ::-webkit-scrollbar-thumb:horizontal {
     width: 5px;
     background-color: rgba(125, 125, 125, 0.7);
-    -webkit-border-radius: 6px;
+    border-radius: 6px;
 }
 
 html, body {
