优化项目展示

--- a/src/common/stylus/base.styl
+++ b/src/common/stylus/base.styl
@@ -1,11 +1,13 @@
 body, html
-  overflow:hidden
+  // overflow:hidden
   overflow-y:auto
+  overflow: scroll
   line-height: 1
   font-weight: 200
   color: #000
   font-family: 'PingFang SC', 'STHeitiSC-Light', 'Helvetica-Light', arial, sans-serif
-  
+html
+  touch-action: none
 .clearfix
   display: inline-block
   &:after
